Add : services full page + assets

--- a/pages/services.html
+++ b/pages/services.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover the elegance and history of Versailles, France.">
-    <title>Services inside Versailles</title>
+    <title>Events in Versailles</title>
     <link rel="stylesheet" href="assets/css/services.css">
 </head>
 <body>
@@ -22,7 +22,296 @@
         </nav>
     </div>
     <main>
-        
+        <h1>Restaurants in Versailles</h1>
+        <div class="events">
+            <article>
+                 <a class="anchor" href="https://musiam-paris.com/restaurants/la-petite-venise/menu_la_petite_venise.pdf">
+                    <img src="assets/images/services/venise.jpg">
+                    <div class="infos">
+                        <h2>La petite Venise</h2>
+                        <h3>Address :</h3>
+                        <p>
+                            All. d'Apollon
+                            <br>
+                            78000 Versailles
+                        </p>
+                        <h3>Opening hours</h3>
+                        <table class="opening-hours">
+                            <tr>
+                                <th>Monday</th>
+                                <td></td><td>Closed</td><td></td>
+                            <tr>
+                                <th>Tuesday</th>
+                                <td>11:45am</td><td>-</td><td>5:00pm</td></tr>
+                            <tr>
+                                <th>Wednesday</th>
+                                <td>11:45am</td><td>-</td><td>5:00pm</td></tr>
+                            <tr>
+                                <th>Thursday</th>
+                                <td>11:45am</td><td>-</td><td>5:00pm</td></tr>
+                            <tr>
+                                <th>Friday</th>
+                                <td>11:45am</td><td>-</td><td>5:00pm</td></tr>
+                            <tr>
+                                <th>Saturday</th>
+                                <td>11:45am</td><td>-</td><td>5:00pm</td></tr>
+                            <tr>
+                                <th>Sunday</th>
+                                <td>11:45am</td><td>-</td><td>5:00pm</td></tr>
+                        </table>
+                        <h3>Phone number</h3>
+                        <p>+33 1 39 53 25 69</p>
+                    </div>
+                </a>
+            </article>
+            <article>
+                 <a class="anchor" href="https://www.le-coup-detat-restaurant-versailles.fr/">
+                    <img src="assets/images/services/coup d'etat.jpg">
+                    <div class="infos">
+                        <h2>Le coup d'État</h2>
+                        <h3>Address :</h3>
+                        <p>
+                            4 Rue de Satory
+                            <br>
+                            78000 Versailles
+                        </p>
+                        <h3>Opening hours</h3>
+                        <table class="opening-hours">
+                            <tr>
+                                <th>Monday</th>
+                                <td>11:00am</td><td>-</td><td>1:00am</td></tr>
+                            <tr>
+                                <th>Tuesday</th>
+                                <td>11:00am</td><td>-</td><td>1:00am</td></tr>
+                            <tr>
+                                <th>Wednesday</th>
+                                <td>11:00am</td><td>-</td><td>1:00am</td></tr>
+                            <tr>
+                                <th>Thursday</th>
+                                <td>11:00am</td><td>-</td><td>1:00am</td></tr>
+                            <tr>
+                                <th>Friday</th>
+                                <td>11:00am</td><td>-</td><td>1:00am</td></tr>
+                            <tr>
+                                <th>Saturday</th>
+                                <td>11:00am</td><td>-</td><td>1:00am</td></tr>
+                            <tr>
+                                <th>Sunday</th>
+                                <td>11:00am</td><td>-</td><td>1:00am</td></tr>
+                        </table>
+                        <h3>Phone number</h3>
+                        <p>+33 1 30 21 98 05</p>
+                    </div>
+                </a>
+            </article>
+            <article>
+                <a class="anchor" href="https://www.la-guinguette-restaurant-versailles.fr/">
+                    <img src="assets/images/services/guinguette.jpg">
+                    <div class="infos">
+                        <h2>La Guinguette</h2>
+                        <h3>Address :</h3>
+                        <p>
+                            11 Rue Colbert
+                            <br>
+                            78000 Versailles
+                        </p>
+                        <h3>Opening hours</h3>
+                        <table class="opening-hours">
+                            <tr>
+                                <th>Monday</th>
+                                <td>11:30am</td><td>-</td><td>10:15pm</td></tr>
+                            <tr>
+                                <th>Tuesday</th>
+                                <td>9:30am</td><td>-</td><td>10:30pm</td></tr>
+                            <tr>
+                                <th>Wednesday</th>
+                                <td>9:30am</td><td>-</td><td>10:30pm</td></tr>
+                            <tr>
+                                <th>Thursday</th>
+                                <td>9:30am</td><td>-</td><td>10:30pm</td></tr>
+                            <tr>
+                                <th>Friday</th>
+                                <td>9:30am</td><td>-</td><td>10:30pm</td></tr>
+                            <tr>
+                                <th>Saturday</th>
+                                <td>9:30am</td><td>-</td><td>10:30pm</td></tr>
+                            <tr>
+                                <th>Sunday</th>
+                                <td>9:30am</td><td>-</td><td>10:30pm</td></tr>
+                        </table>
+                        <h3>Phone number</h3>
+                        <p>+33 1 38 47 24 67</p>
+                    </div>
+                </a>
+            </article>
+            <article>
+                 <a class="anchor" href="https://www.lacote2boeuf.fr/">
+                    <img src="assets/images/services/cote de boeuf.jpg">
+                    <div class="infos">
+                        <h2>La Côte 2 Boeuf</h2>
+                        <h3>Address :</h3>
+                        <p>
+                            129 Av. du Général-Leclerc
+                            <br>
+                            78220 Viroflay
+                        </p>
+                        <h3>Opening hours</h3>
+                        <table class="opening-hours">
+                            <tr>
+                                <th>Monday</th>
+                                <td></td><td>Closed</td><td></td>
+                            <tr>
+                                <th>Tuesday</th>
+                                <td>11:00am</td><td>-</td><td>11:00pm</td></tr>
+                            <tr>
+                                <th>Wednesday</th>
+                                <td>11:00am</td><td>-</td><td>11:00pm</td></tr>
+                            <tr>
+                                <th>Thursday</th>
+                                <td>11:00am</td><td>-</td><td>11:00pm</td></tr>
+                            <tr>
+                                <th>Friday</th>
+                                <td>11:30pm</td><td>-</td><td>11:30pm</td></tr>
+                            <tr>
+                                <th>Saturday</th>
+                                <td>11:00am</td><td>-</td><td>11:00pm</td></tr>
+                            <tr>
+                                <th>Sunday</th>
+                                <td>11:00am</td><td>-</td><td>10:00pm</td></tr>
+                        </table>
+                        <h3>Phone number</h3>
+                        <p>+33 9 81 51 42 97</p>
+                    </div>
+                </a>
+            </article>
+            <article>
+                <a class="anchor">
+                    <img src="assets/images/services/orangerie.jpg">
+                    <div class="infos">
+                        <h2>La Grille de L'Orangerie</h2>
+                        <h3>Address :</h3>
+                        <p>
+                            6 Rue de l'Orangerie
+                            <br>
+                            78000 Versailles
+                        </p>
+                        <h3>Opening hours</h3>
+                        <table class="opening-hours sep">
+                            <tr>
+                                <th rowspan="2">Monday</th>
+                                <td>7:00am</td><td>-</td><td>3:00pm</td></tr>
+                                <td>3:30pm</td><td>-</td><td>8:00pm</td></tr>
+                            <tr>
+                                <th  rowspan="2">Tuesday</th>
+                                <td>7:00am</td><td>-</td><td>3:00pm</td></tr>
+                                <td>3:30pm</td><td>-</td><td>8:00pm</td></tr>
+                            <tr>
+                                <th  rowspan="2">Wednesday</th>
+                                <td>7:00am</td><td>-</td><td>3:00pm</td></tr>
+                                <td>3:30pm</td><td>-</td><td>8:00pm</td></tr>
+                            <tr>
+                                <th  rowspan="2">Thursday</th>
+                                <td>7:00am</td><td>-</td><td>3:00pm</td></tr>
+                                <td>3:30pm</td><td>-</td><td>8:00pm</td></tr>
+                            <tr>
+                                <th  rowspan="2">Friday</th>
+                                <td>7:00am</td><td>-</td><td>3:00pm</td></tr>
+                                <td>3:30pm</td><td>-</td><td>8:00pm</td></tr>
+                            <tr>
+                                <th  rowspan="2">Saturday</th>
+                                <td>7:00am</td><td>-</td><td>3:00pm</td></tr>
+                                <td>3:30pm</td><td>-</td><td>8:00pm</td></tr>
+                            <tr>
+                                <th  rowspan="2">Sunday</th>
+                                <td>7:00am</td><td>-</td><td>3:00pm</td></tr>
+                                <td>3:30pm</td><td>-</td><td>8:00pm</td></tr>
+                        </table>
+                        <h3>Phone number</h3>
+                        <p>+33 1 39 50 15 67</p>
+                    </div>
+                </a>
+            </article>
+            <article>
+                 <a class="anchor" href="https://lasuiteversailles.fr/">
+                    <img src="assets/images/services/suite.jpg">
+                    <div class="infos">
+                        <h2>La Suite</h2>
+                        <h3>Address :</h3>
+                        <p>
+                            15 Rue de la Pourvoierie 
+                            <br>
+                            78000 Versailles
+                        </p>
+                        <h3>Opening hours</h3>
+                        <table class="opening-hours">
+                            <tr>
+                                <th>Monday</th>
+                                <td></td><td>Closed</td><td></td>
+                            <tr>
+                                <th>Tuesday</th>
+                                <td>7:30am</td><td>-</td><td>11:45pm</td></tr>
+                            <tr>
+                                <th>Wednesday</th>
+                                <td>7:30am</td><td>-</td><td>11:45pm</td></tr>
+                            <tr>
+                                <th>Thursday</th>
+                                <td>7:30am</td><td>-</td><td>11:45pm</td></tr>
+                            <tr>
+                                <th>Friday</th>
+                                <td>7:30am</td><td>-</td><td>11:45pm</td></tr>
+                            <tr>
+                                <th>Saturday</th>
+                                <td>7:30am</td><td>-</td><td>11:45pm</td></tr>
+                            <tr>
+                                <th>Sunday</th>
+                                <td>9:00am</td><td>-</td><td>8:00pm</td></tr>
+                        </table>
+                        <h3>Phone number</h3>
+                        <p>+33 1 70 54 83 16</p>
+                    </div>
+                </a>
+            </article>
+            <article>
+                 <a class="anchor" href="http://bistrot-de-la-place.eatbu.com/?lang=fr">
+                    <img src="assets/images/services/bistror.jpg">
+                    <div class="infos">
+                        <h2>Bistrot de la Place</h2>
+                        <h3>Address :</h3>
+                        <p>
+                            43 Bd du Roi
+                            <br>
+                            78000 Versailles
+                        </p>
+                        <h3>Opening hours</h3>
+                        <table class="opening-hours">
+                            <tr>
+                                <th>Monday</th>
+                                <td>7:00am</td><td>-</td><td>10:00pm</td></tr>
+                            <tr>
+                                <th>Tuesday</th>
+                                <td>7:00am</td><td>-</td><td>10:30pm</td></tr>
+                            <tr>
+                                <th>Wednesday</th>
+                                <td>7:00am</td><td>-</td><td>10:30pm</td></tr>
+                            <tr>
+                                <th>Thursday</th>
+                                <td>7:00am</td><td>-</td><td>10:30pm</td></tr>
+                            <tr>
+                                <th>Friday</th>
+                                <td>7:00am</td><td>-</td><td>10:30pm</td></tr>
+                            <tr>
+                                <th>Saturday</th>
+                                <td>8:00am</td><td>-</td><td>10:30pm</td></tr>
+                            <tr>
+                                <th>Sunday</th>
+                                <td>8:00am</td><td>-</td><td>10:30pm</td></tr>
+                        </table>
+                        <h3>Phone number</h3>
+                        <p>+33 1 46 84 35 94</p>
+                    </div>
+                </a>
+            </article>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 WebDesign Project. </p>
