--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover the elegance and history of Versailles, France.">
     <title>Versailles - Home</title>
-    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
     <div class="header">
         <nav class="header-nav">
-            <a class="logo">Versailles</a>
+            <a class="logo" href="index.html">Versailles</a>
             <ul class="nav-links">
                 <li><a href="pages/history.html">History</a></li>
                 <li><a href="pages/sightseeing.html">Sightseeing</a></li>
