--- a/pages/sightseeing.html
+++ b/pages/sightseeing.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <nav class="header-nav">
-            <a href="../home.html" class="logo">Versailles</a>
+            <a href="../index.html" class="logo">Versailles</a>
             <ul class="nav-links">
                 <li><a href="history.html">History</a></li>
                 <li><a href="sightseeing.html">Sightseeing</a></li>
